升级 七牛云OSS

--- a/yami-shop-common/src/main/resources/shop.properties
+++ b/yami-shop-common/src/main/resources/shop.properties
@@ -1,9 +1,9 @@
-shop.qiniu.resourcesUrl=https://img.mall4j.com/
-shop.qiniu.accessKey=****
-shop.qiniu.secretKey=****
-shop.qiniu.bucket=****
+shop.qiniu.resourcesUrl=http://oss.shuhongfan.cf/
+shop.qiniu.accessKey=CO1_LZvlnRRvDDoCccqFc_RmVItaxu07p9T-pby0
+shop.qiniu.secretKey=B8g6Cd26HwaZO6OF3SIGqi1JmIPv3SwfdRtx3Yvi
+shop.qiniu.bucket=shfoss
 # \u5177\u4F53\u67E5\u770BQiniuZone.java
-shop.qiniu.zone=HUA_NAN
+shop.qiniu.zone=XIN_JIA_PO
 
 shop.aLiDaYu.accessKeyId=
 shop.aLiDaYu.accessKeySecret=
